--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "node --experimental-transform-types --watch app.ts"
+    "dev": "node --experimental-transform-types --watch app.ts",
+    "lint": "npx eslint"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.21.2"
+  },
   "devDependencies": {
-    "@types/node": "^22.13.10"
+    "@eslint/js": "^9.22.0",
+    "@types/node": "^22.13.10",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1"
   }
 }
