--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "npx eslint"
   },
   "dependencies": {
+    "@sentry/node": "^9.8.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
