--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
+    "test": "jest",
     "dev": "node --experimental-transform-types --watch index.ts",
     "lint": "npx eslint"
   },
@@ -27,6 +28,8 @@
     "@types/node": "^22.13.10",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.1"
   }
