--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "test": "jest --watchAll",
+    "test": "jest --watchAll --verbose",
     "dev": "node --experimental-transform-types --watch index.ts",
     "lint": "npx eslint"
   },
@@ -26,9 +26,11 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.10",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "supertest": "^7.1.0",
     "ts-jest": "^29.3.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.1"
